# quantizador-de-imagens

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  exemplo_funcional.py  funcoes.py
src/lib/: amostragem.py  histograma.py  quantizador.py
tests/: test_quantizador_de_imagens.py
