[tool.poetry]
name = "quantizador-de-imagens"
version = "0.1.0"
description = ""
authors = ["Orion-Hunter <silvasalesf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
PyQt5 = "^5.15.4"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
